fixed intro picture overflow

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -53,7 +53,7 @@ h1, h2, h3, h4, h5, h6{
     
 
     &--mx-width{
-        max-width: 75rem;
+        max-width: $containerMaxWidth;
         margin: 0 auto;
     }
 
