--- a/app/scss/_intro-section.scss
+++ b/app/scss/_intro-section.scss
@@ -28,20 +28,25 @@
     position: relative;
     flex: 3;
     min-height: 17.5rem;
+    width: 100%;
+
+    @media(min-width: 75em) and (max-width: 1800px){
+      &::before, &::after{
+        right: calc( (100vw - 1225px) / -2 );
+      }
+    }
 
     @include breakpoint-up(large) {
-      margin-right: -9.9375rem;
       flex: 3;
-      
       &::before{
-        background-image: url("../../images/bg-intro-desktop.svg");        
+        background-image: url("../../images/bg-intro-desktop.svg");    
         background-size: 78.125rem;
-        background-position: -3.125rem -17.1875rem;
+        background-position: -60px -17.1875rem;
       }
 
       &::after{
         background-size: 45.9375rem;
-        background-position: 9.0625rem -7.5rem;
+        background-position: 2.8125rem -7.5rem;
         width: 100%;
         height: 120%;
       }
